init cart functionality
